package Utils;

public interface IReadFromFile {

    boolean readDataFromFile();

}
